Farmacia.SRE.Challenge.Api/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-challenge-api
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sre-challenge-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sre-challenge-api
    spec:
      containers:
      - image: cflamenco99/app-sre-challenge-flamenco:#{Build.BuildId}#
        imagePullPolicy: Always
        name: sre-challenge-api
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerregistryflamenco
        restartPolicy: Always
