Farmacia.SRE.Challenge.Api/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-challenge-api-service
spec:
  selector:
    app: sre-challenge-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
